Your update message

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <!-- %BASE_URL% keeps this working on GitHub Pages base paths; ?v= bumps favicon cache -->
+    <link rel="icon" type="image/svg+xml" href="%BASE_URL%favicon.svg?v=1" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>capacity-tracker</title>
   </head>
